--- a/registerApp/src/index.css
+++ b/registerApp/src/index.css
@@ -1,3 +1,22 @@
 body{
+  height: 100%;
   background-color: rgb(97, 97, 97);
+}
+.registerSpace{
+  background-color: lightblue;
+  height: 50vh;
+  text-align: center;
+}
+input{
+  margin: 5px;
+
+}
+
+h1{
+  margin-bottom: 1vh;
+}
+.loginSpace{
+  background-color: gray;
+  height: 50vh;
+  text-align: center;
 }
